<resources>
    <string name="app_name">마파람</string>
    <string name="register_string">회원가입</string>
    <string name="login_string">로그인</string>
    <string name="find_id_text">아이디</string>
    <string name="find_pw_text">비밀번호 찾기</string>
    <string name="service_agree">서비스 이용약관 동의</string>
    <string name="personal_information_agree">개인정보 처리방침 동의</string>
    <string name="view_detail_string"><u>보기</u></string>
    <string name="agree_all">모든 내용을 확인했고 동의합니다.</string>
    <string name="next_step">다음</string>
    <string name="please_agree_all">모든 약관에 동의해주시길 바랍니다.</string>
    <string name="please_agree_policy">서약에 참여하지 않으시면 회원가입이 승인되지 않습니다.</string>
    <string name="id_reject">아이디가 올바르지 않니다.</string>
    <string name="nick_reject">닉네임이 올바르지 않니다.</string>
    <string name="pw_reject">비밀번호가 올바르지 않니다.</string>
    <string name="pw_verify_reject">비밀번호 확인이 올바르지 않습니다.</string>
    <string name="email_reject">이메일이 올바르지 않니다.</string>
    <string name="require_basic_info_string">기본 정보 입력</string>
    <string name="require_addition_info_string">추가 정보 입력</string>
    <string name="id_string">아이디</string>
    <string name="require_id_string">아이디를 입력해주세요</string>
    <string name="nick_string">닉네임</string>
    <string name="require_nick_string">닉네임를 입력해주세요</string>
    <string name="pw_string">비밀번호</string>
    <string name="require_pw_string">비밀번호를 입력해주세요</string>
    <string name="pw_verify_string">비밀번호 확인</string>
    <string name="require_pw_verify_string">비밀번호를 한번 더 입력해주세요</string>
    <string name="email_string">이메일</string>
    <string name="ask_age_string">당신의 나이대</string>
    <string name="ask_favorite_tag_string">당신의 관심 태그</string>
    <string name="please_enter_content">내용을 입력해주세요</string>
    <string name="agree_policy_string">"마파람"에서는 타인에게 상처를 주는 어떠한 행동도 용납되지 않습니다. 이를 위반 시 계정 이용에 제한이 들어갈 수 있습니다.</string>
    <string name="require_tag_string"></string>
    <string name="edit_post">게시글 편집</string>
    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="modify_delete">편집하시겠습니까? 삭제하시겠습니까?</string>
    <string name="goBack">뒤로 가기</string>
    <string name="post">게시</string>
    <string name="addImage">이미지 추가</string>
    <string name="more">...더보기</string>
    <string name="TimeLineTitle">타임라인</string>
    <string name="alarm_text">알림</string>
    <string name="delete_all_alarm">알림 모두 제거</string>
    <string name="make_my_maparam_text">내 마파람 만들기</string>
    <string name="find_maparam">마파람 찾기</string>
    <string name="maparam_with_you">당신과 함께하는 마파람들</string>
    <string name="group_name_text">그룹 이름</string>
    <string name="group_max_member">최대 인원수</string>
    <string name="onetohundred">1에서 100까지의 숫자만 허용됩니다.</string>
    <string name="group_introduce">소개글</string>
    <string name="create_maparam">마파람 생성하기</string>
    <string name="group_member_setting">그룹원 설정</string>
    <string name="view_group_member">그룹원 보기</string>
    <string name="notice">공지사항</string>
    <string name="chattingRoom">채팅방</string>
    <string name="quitGroup">탈퇴하기</string>
    <string name="join_request">가입 신청</string>
    <string name="member_list">그룹원 리스트</string>
    <string name="groupHeader">- 그룹장</string>
    <string name="profile">프로필</string>
    <string name="outofgroup">탈퇴</string>
    <string name="edit_profile">프로필 수정하기</string>
    <string name="maparamImin">참여하는 마파람</string>
    <string name="maparamImin2">내가 가입한 마파람</string>
    <string name="my_log">활동 내역</string>
    <string name="post_keword_amount">오늘의 키워드 게시 수</string>
    <string name="post_timeLine_amount">타임라인 게시물 게시 수</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>