<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_white_rnd_10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/lightgray"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/buttonFrame"
            android:text="@string/make_my_maparam_text"
            android:textColor="@color/default_font_color"
            android:background="@color/white"
            android:gravity="left"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"/>
        <FrameLayout
            android:id="@+id/buttonFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/button"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/close_button"
               />
        </FrameLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/gray"
            android:text="@string/group_name_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/memo_border_blank"
            android:textColor="@color/gray"
            android:hint="@string/please_enter_content"
            android:textColorHint="@color/gray"
            android:padding="9dp"
            android:fontFamily="@font/bm_jua"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/gray"
            android:text="@string/group_max_member"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/memo_border_blank"
            android:textColor="@color/gray"
            android:hint="@string/onetohundred"
            android:textColorHint="@color/gray"
            android:textAlignment="center"
            android:fontFamily="@font/bm_jua"
            android:padding="9dp"
            android:inputType="numberSigned"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/gray"
            android:text="@string/group_introduce"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:background="@drawable/memo_border_blank"
            android:textColor="@color/gray"
            android:hint="@string/please_enter_content"
            android:textColorHint="@color/gray"
            android:fontFamily="@font/bm_jua"
            android:padding="15dp"
            android:inputType="numberSigned"/>
    </LinearLayout>
    <Button
        android:id="@+id/createMaparam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_blue_rnd_10"
        android:text="@string/create_maparam"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/jalnan"
        android:paddingVertical="14dp"
        android:layout_marginBottom="25dp"/>
</LinearLayout>