<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.Register_Basic_Activity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_string"
            android:fontFamily="@font/jalnan"
            android:textColor="@color/mainColor"
            android:textSize="30sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/step_3_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/require_basic_info_string"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/default_font_color"
            android:textSize="20sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_age_string"
                android:fontFamily="@font/bm_jua"
                android:textSize="15sp"
                android:textColor="@color/default_font_color"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <Spinner
                    android:id="@+id/age_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    >
                </Spinner>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_favorite_tag_string"
                    android:fontFamily="@font/bm_jua"
                    android:textSize="15sp"
                    android:textColor="@color/default_font_color"
                    android:layout_marginRight="10dp"></TextView>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/mainColor"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/mainColor"
                app:hintTextColor="@color/mainColor">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tag_input"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/please_enter_content"
                    android:fontFamily="@font/bm_jua"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp"
                    android:textColor="@color/gray"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:padding="25dp"
            android:orientation="vertical"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_policy_string"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/bm_jua"
                android:lineSpacingExtra="15dp"/>
            <CheckBox
                android:id="@+id/agree_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_all"
                android:textColor="@color/default_font_color"
                android:fontFamily="@font/bm_jua"
                android:textSize="17sp"
                android:buttonTint="@color/mainColor"
                android:layout_marginTop="30dp"/>

        </LinearLayout>


        <Button
            android:onClick="weGoingToTheNextLevel"
            android:id="@+id/next_step"
            android:text="@string/next_step"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_blue_rnd_10"
            android:fontFamily="@font/jalnan"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

</ScrollView>