<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/edit_post"
        android:textColor="#343434"
        android:textSize="20sp"
        android:fontFamily="@font/bm_jua"
        android:includeFontPadding="false"
        android:minHeight="50dp"/>

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="#000000"/>-->

    <TextView
        android:layout_below="@id/title"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:fontFamily="@font/bm_jua"
        android:textColor="#343434"
        android:textSize="15sp"
        android:minHeight="50dp"
        android:text="@string/modify_delete"/>


    <LinearLayout
        android:layout_below="@id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit"
            android:letterSpacing="1"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            android:fontFamily="@font/bm_jua"
            android:includeFontPadding="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_white_rnd_5"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:letterSpacing="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/bm_jua"
            android:includeFontPadding="false"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_blue_rnd_5"/>





    </LinearLayout>


</RelativeLayout>