<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.AgreeActivity"
    android:layout_gravity="center"
    android:padding="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_string"
        android:fontFamily="@font/jalnan"
        android:textColor="@color/mainColor"
        android:textSize="30sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/step_1_icon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_string"
        android:fontFamily="@font/bm_jua"
        android:textColor="@color/default_font_color"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/agree_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_agree"
            android:textColor="@color/default_font_color"
            android:fontFamily="@font/bm_jua"
            android:textSize="15sp"
            android:buttonTint="@color/mainColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_detail_string"
            android:gravity="right"
            android:textColor="@color/gray"
            android:fontFamily="@font/bm_jua"
            android:textSize="15sp"
            android:paddingRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/agree_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_information_agree"
            android:textColor="@color/default_font_color"
            android:fontFamily="@font/bm_jua"
            android:textSize="15sp"
            android:buttonTint="@color/mainColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_detail_string"
            android:gravity="right"
            android:textColor="@color/gray"
            android:fontFamily="@font/bm_jua"
            android:textSize="15sp"
            android:paddingRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/agree_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_agree"
            android:textColor="@color/default_font_color"
            android:fontFamily="@font/bm_jua"
            android:textSize="15sp"
            android:buttonTint="@color/mainColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_detail_string"
            android:gravity="right"
            android:textColor="@color/gray"
            android:fontFamily="@font/bm_jua"
            android:textSize="15sp"
            android:paddingRight="30dp"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/agree_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/mainColor"
        android:text="@string/agree_all"
        android:fontFamily="@font/bm_jua"
        android:textSize="20sp"
        android:textColor="@color/default_font_color"
        android:layout_marginTop="25dp"/>
    <Button
        android:onClick="weGoingToTheNextLevel"
        android:id="@+id/next_step"
        android:text="@string/next_step"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_blue_rnd_10"
        android:fontFamily="@font/jalnan"
        android:layout_marginHorizontal="20dp"/>
</LinearLayout>