<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:background="@drawable/whale_blue_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
         />
    </RelativeLayout>
    <TextView
        android:id="@+id/logoName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/jalnan"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="goLoginPage"
        android:text="@string/login_string"
        android:background="@drawable/background_white_rnd_10"
        android:textColor="@color/mainColor"
        android:id="@+id/loginButton"
        android:textSize="15sp"
        android:fontFamily="@font/jalnan"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>
    <Button
        android:text="@string/register_string"
        android:background="@drawable/background_white_rnd_10"
        android:textColor="@color/mainColor"
        android:id="@+id/registerButton"
        android:textSize="15sp"
        android:fontFamily="@font/jalnan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="53dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>