<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.ProfileFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textSize="10sp"
            android:fontFamily="@font/jalnan"
            android:textColor="@color/white"
            android:text="@string/goBack"
            android:background="@drawable/background_blue_rnd_5"
            android:paddingHorizontal="10dp"
            android:paddingVertical="7dp"
            android:layout_marginTop="53dp"
            android:layout_marginLeft="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="강형민의 프로필"
            android:textColor="@color/default_font_color"
            android:textSize="25sp"
            android:fontFamily="@font/bm_jua"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/default_profile"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:id="@+id/infoShell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@id/profile"
                android:layout_marginLeft="19dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/edit_profile">
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="강형민"
                    android:textColor="@color/default_font_color"
                    android:fontFamily="@font/bm_jua"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bm_jua"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:text="20대"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:background="@drawable/background_blue_rnd_5"
                android:text="@string/edit_profile"
                android:textSize="10sp"
                android:fontFamily="@font/jalnan"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                android:layout_marginRight="16dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="17dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bm_jua"
                android:textSize="20sp"
                android:textColor="@color/default_font_color"
                android:text="@string/maparamImin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/maparam_I_have_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="17dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bm_jua"
                android:textSize="20sp"
                android:textColor="@color/default_font_color"
                android:text="@string/my_log"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/amount_keword_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_keword_amount"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/bm_jua"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/amount_timeLine_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_timeLine_amount"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/bm_jua"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</ScrollView>